--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tagview-taggram",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/MunhozTheMage/tagview-taggram/settings",
+  "homepage": "/tagview-taggram",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,17 +10,18 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-is-dev": "^1.0.4",
     "react-scripts": "4.0.0",
     "superagent": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build --repo https://github.com/MunhozTheMage/tagview-taggram.git"
   },
   "eslintConfig": {
     "extends": [
