--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tagview-taggram",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/tagview-taggram",
+  "homepage": "https://munhozthemage.github.io/tagview-taggram/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,11 +17,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build --repo https://github.com/MunhozTheMage/tagview-taggram.git"
+    "deploy": "gh-pages -d build --remote tagview-taggram"
   },
   "eslintConfig": {
     "extends": [
